// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    id
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        id
        name
        products {
          manufacturer {
            location
          }
          name
        }
      }
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'MultipleTypes' resolver 1`] = `
{
  "operation": "query MultipleTypes {
  productAndManufaturer {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        id
      }
    }
    ... on Manufacturer {
      id
      name
      products {
        manufacturer {
          location
        }
        name
      }
    }
  }
}",
  "pathToExportData": [
    "productAndManufaturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'Nested' resolver 1`] = `
{
  "operation": "query Nested {
  product {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        ... on Manufacturer {
          id
          name
          products {
            manufacturer {
              location
            }
            name
          }
        }
      }
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
